--- a/configs.yaml
+++ b/configs.yaml
@@ -7,6 +7,7 @@
 #                                                                         #
 ###########################################################################
 
+## Parameters
 # PowerFunctions.Rmd
 
 rho: [0, 0.2, 0.5, 0.8]
@@ -26,6 +27,10 @@ tnum: 10000
 snum: 2
 mod.type: "constant"
 omega: NULL
-
 design: ["Blocked_i1_2c", "Blocked_i1_2f", "Blocked_i1_2r", "Blocked_i1_3r", "Blocked_i1_4r"]
+
+## File directory
 fdir: "I:/Multiplicity/datafiles/"
+
+## Controls
+run_powerFunctions: TRUE
