add flag for whether to overwrite existing results and add slurm file for odyssey analysis

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ Validation/data/*.RDS
 Validation/data/*.csv
 Validation/data/
 *cache*
-_files/*
+Validation/*_files/*
 
 ## Added in another repo. Don't remember for which use.
 inst/doc
